Develop survey classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ export(generate.transects)
 export(make.design)
 export(make.region)
 exportClasses(Line.Transect.Design)
+exportClasses(Line.Transect.Survey)
 exportClasses(Point.Transect.Design)
+exportClasses(Point.Transect.Survey)
+exportClasses(Survey)
 exportClasses(Survey.Design)
 exportMethods(generate.transects)
 exportMethods(plot)
