--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,10 @@ Collate:
     'Survey.Design.R'
     'generic.functions.R'
     'Line.Transect.Design.R'
+    'Survey.R'
+    'Line.Transect.Survey.R'
     'Point.Transect.Design.R'
+    'Point.Transect.Survey.R'
     'check.shape.R'
+    'generate.systematic.lines.R'
     'generate.systematic.points.R'
