Keeping things CRAN tidy as I go...
package /function declarations, function arguments and object slot definitions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ exportClasses(Survey)
 exportClasses(Survey.Design)
 exportMethods(generate.transects)
 exportMethods(plot)
-import(methods)
 import(sf)
 importFrom(graphics,plot)
+importFrom(methods,new)
+importFrom(methods,validObject)
+importFrom(stats,runif)
