Added coverage grid and methods to create
Plan to store the grids inside the design objects

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ LazyData: true
 RoxygenNote: 6.1.1
 Collate: 
     'Class.Constructors.R'
+    'Coverage.Grid.R'
     'Survey.R'
     'Region.R'
     'Survey.Design.R'
