Added convex hull for zzs and activated complementary zz
complementary zz design called eszigzagcom

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,3 +30,4 @@ Collate:
     'generate.eqspace.zigzags.R'
     'generate.parallel.lines.R'
     'generate.systematic.points.R'
+    'get.intersection.points.R'
