Update docs to reflect changes in class names

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,14 +18,14 @@ RoxygenNote: 6.1.1
 Collate: 
     'Class.Constructors.R'
     'Coverage.Grid.R'
-    'Survey.R'
+    'Transect.R'
     'Region.R'
     'Survey.Design.R'
     'generic.functions.R'
     'Line.Transect.Design.R'
-    'Line.Transect.Survey.R'
+    'Line.Transect.R'
     'Point.Transect.Design.R'
-    'Point.Transect.Survey.R'
+    'Point.Transect.R'
     'check.shape.R'
     'generate.eqspace.zigzags.R'
     'generate.parallel.lines.R'
