--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,14 @@ export(generate.transects)
 export(make.coverage)
 export(make.design)
 export(make.region)
+exportClasses(Line.Transect)
 exportClasses(Line.Transect.Design)
-exportClasses(Line.Transect.Survey)
+exportClasses(Point.Transect)
 exportClasses(Point.Transect.Design)
-exportClasses(Point.Transect.Survey)
-exportClasses(Survey)
 exportClasses(Survey.Design)
+exportClasses(Transect)
 exportMethods(generate.transects)
 exportMethods(plot)
-import(sf)
 importFrom(graphics,plot)
 importFrom(methods,new)
 importFrom(methods,validObject)
