--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(generate.transects)
 export(make.coverage)
 export(make.design)
 export(make.region)
+export(run.coverage)
 exportClasses(Line.Transect)
 exportClasses(Line.Transect.Design)
 exportClasses(Point.Transect)
@@ -12,6 +13,7 @@ exportClasses(Survey.Design)
 exportClasses(Transect)
 exportMethods(generate.transects)
 exportMethods(plot)
+exportMethods(show)
 importFrom(graphics,plot)
 importFrom(methods,new)
 importFrom(methods,validObject)
