--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,15 @@ exportClasses(Transect)
 exportMethods(generate.transects)
 exportMethods(plot)
 exportMethods(show)
+import(sf)
+importFrom(grDevices,heat.colors)
+importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(methods,new)
+importFrom(methods,show)
 importFrom(methods,validObject)
+importFrom(plot3D,colkey)
+importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,rbinom)
 importFrom(stats,runif)
