Can now allocate effort in line transect designs based on total samplers/line.length
Currently only been tested when the design is the same in each strata. When the design is the same in each strata the spacing is calculated globally across the entire study region.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Collate:
     'Line.Transect.R'
     'Point.Transect.Design.R'
     'Point.Transect.R'
-    'calc.ave.line.height.R'
+    'calc.region.width.R'
     'check.line.design.R'
     'check.point.design.R'
     'check.shape.R'
