Calculating and storing trackline length when generating transecs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,9 @@ Collate:
     'Point.Transect.Design.R'
     'Point.Transect.R'
     'calc.region.width.R'
+    'calculate.trackline.pl.R'
+    'calculate.trackline.zz.R'
+    'calculate.trackline.zzcom.R'
     'check.line.design.R'
     'check.point.design.R'
     'check.shape.R'
