Can write to shapefile
reference #4

GPX is more complicated as requires transeformation into lat/on

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(make.coverage)
 export(make.design)
 export(make.region)
 export(run.coverage)
+export(write.transects)
 exportClasses(Line.Transect)
 exportClasses(Line.Transect.Design)
 exportClasses(Point.Transect)
