--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 .RData
 .Ruserdata
 dsuds.Rproj
+.DS_Store
+inst/extdata/.DS_Store
+inst/extdata/.DS_Store
+inst/extdata/.DS_Store
+inst/extdata/.DS_Store
