Add missing imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ exportMethods(plot)
 exportMethods(show)
 import(sf)
 importFrom(grDevices,heat.colors)
+importFrom(graphics,legend)
+importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(methods,new)
@@ -29,3 +31,4 @@ importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
 importFrom(stats,runif)
+importFrom(stats,sd)
