Now writes coordinates to csv and txt file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,5 +50,7 @@ Collate:
     'generate.random.points.R'
     'generate.systematic.points.R'
     'get.intersection.points.R'
+    'line.coords.as.dataframe.R'
+    'point.coords.as.dataframe.R'
     'run.coverage.R'
     'write.transects.R'
