--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,3 +32,5 @@ importFrom(stats,na.omit)
 importFrom(stats,rbinom)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(utils,write.csv)
+importFrom(utils,write.table)
