--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
 importFrom(plot3D,colkey)
+importFrom(rgdal,writeOGR)
+importFrom(sf,as_Spatial)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
