--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,11 +23,11 @@ importFrom(graphics,legend)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
 importFrom(plot3D,colkey)
-importFrom(rgdal,writeOGR)
 importFrom(sf,as_Spatial)
 importFrom(stats,median)
 importFrom(stats,na.omit)
