Add segmented line transect design

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,7 @@ Collate:
     'Point.Transect.R'
     'calc.region.width.R'
     'calculate.trackline.pl.R'
+    'calculate.trackline.segl.R'
     'calculate.trackline.zz.R'
     'calculate.trackline.zzcom.R'
     'check.line.design.R'
@@ -50,6 +51,7 @@ Collate:
     'generate.eqspace.zigzags.R'
     'generate.parallel.lines.R'
     'generate.random.points.R'
+    'generate.segmented.grid.R'
     'generate.systematic.points.R'
     'get.intersection.points.R'
     'line.coords.as.dataframe.R'
