--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ exportClasses(Line.Transect)
 exportClasses(Line.Transect.Design)
 exportClasses(Point.Transect)
 exportClasses(Point.Transect.Design)
+exportClasses(Segment.Transect)
+exportClasses(Segment.Transect.Design)
 exportClasses(Survey.Design)
 exportClasses(Transect)
 exportMethods(generate.transects)
