--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_set)
 importFrom(grDevices,heat.colors)
+importFrom(graphics,legend)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
