--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_set)
+importFrom(grDevices,gray)
 importFrom(grDevices,heat.colors)
 importFrom(graphics,legend)
 importFrom(graphics,mtext)
