--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Imports:
 Suggests: knitr,
           rmarkdown,
           tibble,
+          covr,
           testthat
 VignetteBuilder: knitr
 Type: Package
