--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,14 @@ exportMethods(get.coverage)
 exportMethods(plot)
 exportMethods(show)
 import(sf)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_sf)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,theme_set)
+importFrom(grDevices,gray)
 importFrom(grDevices,heat.colors)
 importFrom(graphics,legend)
 importFrom(graphics,mtext)
