Another attempt at cross platform seeds

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Suggests: knitr,
           rmarkdown,
           tibble,
           covr,
-          testthat
+          testthat,
+          xpectr
 VignetteBuilder: knitr
 Type: Package
 Title: Distance Sampling Survey Design
