Change set.seed back to base function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,7 @@ Suggests: knitr,
           rmarkdown,
           tibble,
           covr,
-          testthat,
-          xpectr
+          testthat
 VignetteBuilder: knitr
 Type: Package
 Title: Distance Sampling Survey Design
