Add missing import statements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,10 +31,13 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_set)
 importFrom(grDevices,gray)
 importFrom(grDevices,heat.colors)
+importFrom(graphics,axis)
 importFrom(graphics,legend)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(graphics,segments)
+importFrom(graphics,text)
 importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,show)
