--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_sf)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,scale_color_viridis_c)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_set)
@@ -42,7 +43,6 @@ importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
-importFrom(plot3D,colkey)
 importFrom(sf,as_Spatial)
 importFrom(stats,median)
 importFrom(stats,na.omit)
