--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(graphics,plot)
 importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(methods,as)
+importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
