Add missing function import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
 importFrom(sf,as_Spatial)
+importFrom(sf,st_zm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
