--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,5 +51,6 @@ importFrom(stats,na.omit)
 importFrom(stats,rbinom)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(utils,sessionInfo)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
