--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,9 @@ importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
 importFrom(sf,as_Spatial)
+importFrom(sf,st_is_valid)
+importFrom(sf,st_make_valid)
+importFrom(sf,st_set_precision)
 importFrom(sf,st_zm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
