--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Suggests: knitr,
 VignetteBuilder: knitr
 Type: Package
 Title: Distance Sampling Survey Design
-Version: 1.0.1
+Version: 1.0.2
 Authors@R: c(
   person("Laura", "Marshall", email = "lhm@st-andrews.ac.uk", role = c("aut", "cre")),
   person("Rexstad", "Eric", email = "eric.rexstad@st-andrews.ac.uk", role = "ctb"))
@@ -59,6 +59,7 @@ Collate:
     'generate.systematic.points.R'
     'get.intersection.points.R'
     'line.coords.as.dataframe.R'
+    'mat.mult.R'
     'point.coords.as.dataframe.R'
     'run.coverage.R'
     'write.transects.R'
