--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,11 +45,15 @@ importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
 importFrom(sf,as_Spatial)
+importFrom(sf,st_is_valid)
+importFrom(sf,st_make_valid)
+importFrom(sf,st_set_precision)
 importFrom(sf,st_zm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(utils,sessionInfo)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
