--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,7 @@
-pandoc: 3.1.11
-pkgdown: 2.0.9
+pandoc: '3.2'
+pkgdown: 2.1.1
 pkgdown_sha: ~
 articles:
   GettingStarted: GettingStarted.html
   MultiStrataVignette: MultiStrataVignette.html
-last_built: 2024-05-27T18:15Z
-
+last_built: 2024-11-13T16:33Z
