--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Suggests: knitr,
 VignetteBuilder: knitr
 Type: Package
 Title: Distance Sampling Survey Design
-Version: 1.0.2
+Version: 1.0.3
 Authors@R: c(
   person("Laura", "Marshall", email = "lhm@st-andrews.ac.uk", role = c("aut", "cre")),
   person("Rexstad", "Eric", email = "eric.rexstad@st-andrews.ac.uk", role = "ctb"))
@@ -23,7 +23,7 @@ Description: Creates survey designs for distance sampling surveys. These
     available in our 'Distance' for Windows software and are detailed in 
     Chapter 7 of Advanced Distance Sampling, Buckland et. al. (2008, 
     ISBN-13: 978-0199225873). Find out more about estimating animal/plant 
-    abundance with distance sampling at <http://distancesampling.org/>. 
+    abundance with distance sampling at <https://distancesampling.org/>. 
 BugReports: https://github.com/DistanceDevelopment/dssd/issues
 License: GPL (>=2)
 Encoding: UTF-8
