--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,23 +8,27 @@ template:
   includes:
     in_header: |
       <script type="text/javascript"> (function(c,l,a,r,i,t,y){ c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)}; t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;  y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window, document, "clarity","script", "m9tfz3zc93");</script>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-JD2Y97JXPX"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+      
+        gtag('config', 'G-JD2Y97JXPX');
+      </script>
+
 
 navbar:
   bg: primary
   structure:
-    right: [twitter, github]
-  components:
-    twitter:
-      icon: fa-twitter
-      href: https://twitter.com/distancesamp
-      aria-label: Twitter
+    right: [github]
 footer:
   structure:
     right: donate
-    left: clarity
+    left: cookies
 
   components:
     donate: "If you wish to donate to development and maintenance, please <a href='mailto:distance@st-andrews.ac.uk'>email us</a>."    
-    clarity:  "We improve our site and software support by using Microsoft Clarity to see <br>
-      how you use our website. By using our site, you agree that we and Microsoft <br>
-      can collect and use this data. Clarity is GDPR compliant."
+    cookies:  "We improve our site and software support by using cookies to see <br>
+      how you use our website."
