--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: '3.2'
-pkgdown: 2.1.1
+pandoc: 3.6.4
+pkgdown: 2.1.3
 pkgdown_sha: ~
 articles:
   GettingStarted: GettingStarted.html
   MultiStrataVignette: MultiStrataVignette.html
-last_built: 2025-04-22T10:54Z
+last_built: 2025-09-16T09:03Z
