--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,17 +6,36 @@ template:
     fg: "#000000"
     primary: "#0542a3"
   includes:
-    in_header: |
-      <script type="text/javascript"> (function(c,l,a,r,i,t,y){ c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)}; t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;  y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window, document, "clarity","script", "m9tfz3zc93");</script>
-      <!-- Google tag (gtag.js) -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-JD2Y97JXPX"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-      
-        gtag('config', 'G-JD2Y97JXPX');
+    before_body: |
+      <!-- Cookie Consent by TermsFeed https://www.TermsFeed.com -->
+      <script type="text/javascript" src="https://www.termsfeed.com/public/cookie-consent/4.2.0/cookie-consent.js" charset="UTF-8"></script>
+      <script type="text/javascript" charset="UTF-8">
+      document.addEventListener('DOMContentLoaded', function () {
+      cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palette":"light","language":"en","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"page_refresh_confirmation_buttons":false,"website_name":"https://distancesampling.org/dssd/"});
+      });
       </script>
+      
+      <!-- Google Analytics -->
+      <!-- Google tag (gtag.js) --> 
+      <script type="text/plain" data-cookie-consent="tracking" async src="https://www.googletagmanager.com/gtag/js?id=G-JD2Y97JXPX"></script> 
+      <script type="text/plain" data-cookie-consent="tracking"> 
+      window.dataLayer = window.dataLayer || [];
+       function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+       gtag('config', 'G-JD2Y97JXPX');
+      </script>
+      <!-- end of Google Analytics-->
+      
+      <noscript>Free cookie consent management tool by <a href="https://www.termsfeed.com/">TermsFeed</a></noscript>
+      <!-- End Cookie Consent by TermsFeed https://www.TermsFeed.com -->
+      
+      
+      
+      
+      
+      <!-- Below is the link that users can use to open Preferences Center to change their preferences. Do not modify the ID parameter. Place it where appropriate, style it as needed. -->
+      
+      <a href="#" id="open_preferences_center">Update cookies preferences</a>
 
 
 navbar:
